--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "docs/template"]
 	path = docs/template
-	url = git@gitlab.hrz.tu-chemnitz.de:imf-numerik/pyroll/pyroll-documentation-template.git
+	url = ../pyroll-documentation-template.git
