--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docs/template"]
 	path = docs/template
 	url = ../pyroll-documentation-template.git
+[submodule "pyroll-core"]
+	path = pyroll-core
+	url = ../pyroll-core
