--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyroll-integral-thermal"
-version = "0.1.1"
+version = "0.2.0"
 description = "Plugin for PyRoll providing an integral approach for thermal modelling"
 authors = [
     "Matthias Schmidtchen <matthias.schmidtchen@imf.tu-freiberg.de>",
@@ -11,7 +11,7 @@ license = "GPL-3.0-only"
 
 [tool.poetry.dependencies]
 python = ">=3.10, <3.11"
-pyroll = "^0.3.1"
+pyroll = "0.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.0"
