--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ license = "GPL-3.0-only"
 
 [tool.poetry.dependencies]
 python = ">=3.10, <3.11"
-pyroll = "^0.4.0"
+pyroll = ">=0.4.3, <0.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.0"
