--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,16 @@
 [tool.poetry]
 name = "pyroll-integral-thermal"
-version = "0.2.1"
-description = "Plugin for PyRoll providing an integral approach for thermal modelling"
+version = "0.2.2"
+description = "Plugin for PyRoll providing an integral approach for thermal modelling."
 authors = [
-    "Matthias Schmidtchen <matthias.schmidtchen@imf.tu-freiberg.de>",
     "Max Weiner <max.weiner@imf.tu-freiberg.de>",
     "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
 ]
-license = "GPL-3.0-only"
+license = "BSD-3-Clause"
 
 [tool.poetry.dependencies]
-python = ">=3.10, <3.11"
-pyroll = ">=0.4.3, <0.5.0"
+python = ">=3.9, <3.11"
+pyroll = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.0"
