--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,15 @@
 [tool.poetry]
 name = "pyroll-integral-thermal"
-version = "0.2.2"
+version = "0.2.3"
 description = "Plugin for PyRoll providing an integral approach for thermal modelling."
 authors = [
     "Max Weiner <max.weiner@imf.tu-freiberg.de>",
     "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
 ]
 license = "BSD-3-Clause"
+homepage = "https://pyroll-project.github.io/"
+repository = "https://github.com/pyroll-project/pyroll-integral-thermal"
+documentation = "https://pyroll-project.github.io/modules/pyroll-integral-thermal/docs/docs"
 
 [tool.poetry.dependencies]
 python = ">=3.9, <3.11"
