--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyroll-integral-thermal"
-version = "0.2.3"
+version = "1.0.0"
 description = "Plugin for PyRoll providing an integral approach for thermal modelling."
 authors = [
     "Max Weiner <max.weiner@imf.tu-freiberg.de>",
@@ -10,14 +10,18 @@ license = "BSD-3-Clause"
 homepage = "https://pyroll-project.github.io/"
 repository = "https://github.com/pyroll-project/pyroll-integral-thermal"
 documentation = "https://pyroll-project.github.io/modules/pyroll-integral-thermal/docs/docs"
+packages = [
+    { include = "pyroll/integral_thermal" }
+]
 
 [tool.poetry.dependencies]
 python = ">=3.9, <3.11"
-pyroll = "^0.5.0"
+pyroll = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.0"
-pyroll = { path = "pyroll-core", develop = true }
+pyroll = { git = "https://github.com/pyroll-project/pyroll-core", branch="main", develop = true }
+ipython = "^8.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
