--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,13 @@ documentation = "https://pyroll-project.github.io/modules/pyroll-integral-therma
 packages = [
     { include = "pyroll/integral_thermal" }
 ]
+readme = "README.md"
+classifiers = [
+    "Intended Audience :: Science/Research",
+    "Intended Audience :: Manufacturing",
+    "Operating System :: OS Independent",
+    "Topic :: Scientific/Engineering"
+]
 
 [tool.poetry.dependencies]
 python = ">=3.9, <3.11"
